[tool.poetry]
name = "hexlet-ci-app"
version = "0.1.0"
description = ""
authors = ["Alexander <alexzhur87@mail.ru>"]
readme = "README.md"
packages = [{include = "hexlet_ci_app"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
